--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,24 @@
 version: '3'
 services:
   postgres:
-    image: postgres:latest
+    container_name: postgres
+    image: postgres
     restart: always
     ports:
-      - 5432:5432
+      - '{$POSTGRES_HOST_PORT}:{$POSTGRES_CONTAINER_PORT}'
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DATABASE=domain
+      - POSTGRES_USER={$POSTGRES_USER}
+      - POSTGRES_PASSWORD={$POSTGRES_PASSWORD}
+      - POSTGRES_DATABASE={$POSTGRES_DATABASE}
+    networks:
+      - local
+  app:
+    container_name: {$PROJECT_NAME}
+    build: .
+    env_file:
+      - .env
+    depends_on:
+      - postgres
+    networks:
+      - local
+    restart: always
