--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,7 @@ PROJECT_NAME=
 
 HTTP_PORT=
 
-POSTGRES_HOST_PORT=
-POSTGRES_CONTAINER_POR=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
+POSTGRES_PORT=
