--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: postgres
     restart: always
     ports:
-      - '{$POSTGRES_HOST_PORT}:{$POSTGRES_CONTAINER_PORT}'
+      - 5432
     environment:
       - POSTGRES_USER={$POSTGRES_USER}
       - POSTGRES_PASSWORD={$POSTGRES_PASSWORD}
@@ -13,7 +13,7 @@ services:
     networks:
       - local
   app:
-    container_name: {$PROJECT_NAME}
+    container_name: "{$PROJECT_NAME}"
     build: .
     env_file:
       - .env
@@ -22,3 +22,7 @@ services:
     networks:
       - local
     restart: always
+
+networks:
+  local:
+    driver: bridge
